<resources>
    <string name="app_name">Materi.mu</string>

    <!--    Login dan registrasi-->
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="text_register">R E G I S T E R</string>
    <string name="text_blmakun">Belum punya akun?</string>
    <string name="btn_buatakun">Buat akun</string>
    <string name="text_login">L O G I N</string>
    <string name="btn_register">Daftar</string>
    <string name="text_sdhakun">Sudah punya akun?</string>
    <string name="text_nama">Nama Lengkap</string>
    <string name="text_selamatDatang">Selamat Datang</string>
    <string name="text_mulai">Mulai</string>
    <string name="gambar_home">gambar home</string>
    <string name="text_logout">Logout</string>


    <string name="title_activity_halaman_user">HalamanUserActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--    Recyclerview-->
    <string name="Title">Ini Title</string>
    <string name="sub_Title">Sub title</string>

    <!--  Navigation drawer activity-->
    <string name="text_profile">Profile</string>
    <string name="text_home">Home</string>
    <string name="text_bookmark">Bookmark</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_Halo_home">Hello HOME</string>
    <string name="text_Halo_bookmark">Hello Bookmark</string>
    <string name="text_Halo_Logout">Hello Logout</string>
    <string name="text_Halo_profile">Hello PROFILE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="kode">kode</string>
    <string name="isi">isi</string>
    <string name="kategori">kategori</string>

</resources>