<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".RegistrasiActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="30dp"
        android:background="#b2ebf2"
        android:elevation="4dp"
        android:foregroundGravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">


            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email_icon"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/lock_icon"
                android:hint="@string/text_password"
                android:inputType="numberPassword"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/btnkirimDaftar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:background="#00bcd4"
                android:text="@string/btn_register"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-4dp"
                android:foregroundGravity="center"
                android:gravity="center_horizontal"
                android:text="@string/text_sdhakun"
                android:textColor="#00bcd4"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:background="#00bcd4"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />



        </LinearLayout>
    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/logomaterimu1"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true"
        android:elevation="4dp"
        android:foregroundGravity="center"/>


    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="10dp"
        android:foregroundGravity="center"
        android:gravity="center_horizontal"
        android:text="@string/text_register"
        android:textColor="#00bcd4"
        android:textSize="26sp"
        android:textStyle="bold" />


</RelativeLayout>